--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,18 @@
 [submodule ".zsh_custom/zsh-autosuggestions"]
 	path = .zsh_custom/zsh-autosuggestions
-	url = git@github.com:zsh-users/zsh-autosuggestions.git
+	url = https://github.com/zsh-users/zsh-autosuggestions.git
 [submodule ".zsh_custom/zsh-completions"]
 	path = .zsh_custom/zsh-completions
-	url = git@github.com:zsh-users/zsh-completions.git
+	url = https://github.com/zsh-users/zsh-completions.git
 [submodule ".zsh_custom/zsh-history-substring-search"]
 	path = .zsh_custom/zsh-history-substring-search
-	url = git@github.com:zsh-users/zsh-history-substring-search.git
+	url = https://github.com/zsh-users/zsh-history-substring-search.git
 [submodule ".zsh_custom/zsh-syntax-highlighting"]
 	path = .zsh_custom/zsh-syntax-highlighting
-	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
 [submodule ".vim/pack/vendor/start/nerdtree"]
 	path = .vim/pack/vendor/start/nerdtree
-	url = git@github.com:preservim/nerdtree.git
+	url = https://github.com/preservim/nerdtree.git
 [submodule ".vim/pack/plugins/opt/vim-polyglot"]
 	path = .vim/pack/plugins/opt/vim-polyglot
 	url = https://github.com/sheerun/vim-polyglot
